--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="inicio" class="inicio">
         <div class="contenido-banner">
             <div class="contenedor-img">
-                <img src="https://c0.klipartz.com/pngpicture/782/114/gratis-png-icono-de-perfil-icono-de-usuario-en-un-circulo.png" alt="Foto de Perfil">
+                <img src="https://avatars.githubusercontent.com/u/126510943?v=4" alt="Foto de Perfil">
             </div>
             <h1>MATIAS QUINTANA</h1>
             <h2>Programador Aprendiz - Experto en Coding y Gaming</h2>
