--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="#sobremi">SOBRE MI</a></li>
                     <li><a href="#skills">SKILLS</a></li>
                     <li><a href="#curriculum">CURRICULUM</a></li>
-                    <li><a href="#portfolio">PORTFOLIO</a></li>
+                    <li><a href="#portfolio">CERTIFICADOS</a></li>
                     <li><a href="#contacto">CONTACTO</a></li>
                 </ul>
             </nav>
@@ -282,51 +282,51 @@
         </div>
     </section>
 
-    <!-- Seccion Portfolio -->
+    <!-- Seccion Certificaciones/Portfolio -->
     <section id="portfolio" class="portfolio">
         <div class="contenido-seccion">
-            <h2>PORTFOLIO</h2>
+            <h2>CERTIFICADOS</h2>
             <div class="galeria">
                 <div class="proyecto">
-                    <img src="img/p1.jpg" alt="">
+                    <img src="Imagenes/p1.2.png" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <h3>Certificado</h3>
+                        <p>C2 Proficiente</p>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="img/p2.jpg" alt="">
+                    <img src="Imagenes/p2.jpeg" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <h3>Certificado</h3>
+                        <p>Data Analytics</p>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="img/p3.jpg" alt="">
+                    <img src="Imagenes/p3.jpeg" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <h3>Certificado</h3>
+                        <p>Microsoft Azure</p>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="img/p4.jpg" alt="">
+                    <img src="Imagenes/p4.jpeg" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <h3>Certificado</h3>
+                        <p>Python</p>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="img/p5.jpg" alt="">
+                    <img src="Imagenes/p5.jpeg" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <h3>Certificado</h3>
+                        <p>SQL</p>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="img/p6.jpg" alt="">
+                    <img src="Imagenes/p6.jpg" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <h3>Proximamente</h3>
+                        <p>UTN</p>
                     </div>
                 </div>
             </div>
