Create Cv y boton de mail

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="estilo.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <!-- Menu Encabezado -->
@@ -40,10 +41,10 @@
             <h1>MATIAS QUINTANA</h1>
             <h2>Programador Aprendiz - Experto en Coding y Gaming</h2>
             <div class="redes">
-                <a href="#"><i class="fa-brands fa-linkedin"></i></i></a>
-                <a href="#"><i class="fa-brands fa-twitch"></i></a>
-                <a href="#"><i class="fa-brands fa-square-github"></i></a>
-                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.linkedin.com/in/matiasballesteros/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.twitch.tv/kinsol"><i class="fa-brands fa-twitch"></i></a>
+                <a href="https://github.com/ProfeCandy"><i class="fa-brands fa-square-github"></i></a>
+                <a href="https://www.youtube.com/@Kinsol0616"><i class="fa-brands fa-youtube"></i></a>
             </div>
         </div>
     </section>
@@ -66,7 +67,7 @@
                     <ul>
                         <li><strong>Juego Favoritos:</strong> Hollow Knight: SilkSong</li>
                         <li><strong>Peor Juego:</strong> El lol</li>
-                        <li><strong>Website:</strong> www.matiqb.com</li>
+                        <li><strong>Website:</strong> En progreso...</li>
                         <li><strong>Cargo:</strong> <span>Programador Junior</span> </li>
                 </div>
                  <!-- Intereses -->
@@ -108,10 +109,9 @@
                     </div>
                   </div>
                 </div>
-            <button>
-                Descargar CV <i class="fa-solid fa-download"></i>
-                <span class="overlay"></span>
-            </button>
+            <a href="CV/CV_Matias Quintana ES.pdf" download="CV_Matias Quintana ES.pdf" class="btn-cv">
+                    Descargar CV <i class="fa-solid fa-download"></i>
+            </a>
         </div>
     </section>
 
@@ -223,7 +223,7 @@
                         <h4>Tecnicatura</h4>
                         <span class="casa">Universidad Tecnologica Nacional Gral. Pacheco</span>
                         <span class="fecha">2024 - en progreso</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
+                        <p>Actualmente cursando la Tecnicatura en Programación, con foco en algoritmos, estructuras de datos, bases de datos, y desarrollo en C++ y Java. La formación incluye materias orientadas a la programación orientada a objetos, diseño de sistemas y fundamentos de ingeniería del software.</p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
@@ -232,7 +232,7 @@
                         <h4>SoyHenry</h4>
                         <span class="casa">BootCamp</span>
                         <span class="fecha">2023 - 2024</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
+                        <p>En este programa intensivo en Desarrollo Web Full Stack. Adquirí experiencia práctica en tecnologías como JavaScript, React, Redux, Node.js, Express y PostgreSQL, además de metodologías ágiles (Scrum) y trabajo colaborativo en proyectos grupales simulando entornos reales de trabajo IT.</p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
@@ -241,7 +241,7 @@
                         <h4>Profesorado</h4>
                         <span class="casa">ISDF N°52 Inglés</span>
                         <span class="fecha">2019 - 2023</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
+                        <p>Formación como Profesor de Inglés, con enfoque en pedagogía, comunicación y didáctica. Esta experiencia fortaleció mis habilidades de comunicación, trabajo en equipo, gestión de grupos y transmisión de conocimientos, competencias transferibles a entornos de proyectos tecnológicos.</p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
@@ -254,7 +254,7 @@
                         <h4>Proyect Manager</h4>
                         <span class="casa">E-commerce Cerveceria Hold</span>
                         <span class="fecha">2024 - 2025</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
+                        <p>Gestión de un equipo de 6 desarrolladores para el desarrollo de un e-commerce enfocado en la venta de cervezas artesanales. Implementación de metodologías ágiles (Scrum/Kanban), definición de roadmap y backlog, coordinación con el área de diseño y QA.</p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
@@ -263,7 +263,7 @@
                         <h4>Back Developer</h4>
                         <span class="casa">Rick and Morti PI</span>
                         <span class="fecha">2023</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
+                        <p>Proyecto individual del BootCamp SoyHenry que consistió en crear una aplicación web interactiva con datos de la API de Rick and Morty</p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
@@ -272,7 +272,7 @@
                         <h4>Front Developer</h4>
                         <span class="casa">E-commerce Olimpus</span>
                         <span class="fecha">2022 - 2023</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
+                        <p>Desarrollo de la interfaz de usuario para una plataforma de e-commerce ficticia centrada en la venta de productos deportivos.</p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
@@ -339,16 +339,19 @@
             <div class="fila">
                 <!-- Formulario -->
                 <div class="col">
-                    <input type="text" placeholder="Tú Nombre">
-                    <input type="text" placeholder="Número telefónico">
-                    <input type="text" placeholder="Dirección de correo">
-                    <input type="text" placeholder="Tema">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
-                    <button>
-                        Enviar Mensaje<i class="fa-solid fa-paper-plane"></i>
-                        <span class="overlay"></span>
-                    </button>
-                    </div>
+                    <form id="form-contacto">
+                        <input type="text" id="nombre" placeholder="Tú Nombre" required>
+                        <input type="tel" id="telefono" placeholder="Número telefónico">
+                        <input type="email" id="email" placeholder="Dirección de correo" required>
+                        <input type="text" id="tema" placeholder="Tema">
+                        <textarea id="mensaje" cols="30" rows="10" placeholder="Mensaje" required></textarea>
+                        
+                        <button type="submit">
+                            Enviar Mensaje <i class="fa-solid fa-paper-plane"></i>
+                            <span class="overlay"></span>
+                        </button>
+                    </form>
+                </div>
                 <!-- Contacto -->
                 <div class="col">
                     <img src="img/ubicacion.png" alt="">
@@ -356,10 +359,6 @@
                         <ul>
                             <li>
                                 <h3>Información de Contacto</h3>
-                            </li>
-                             <li>
-                                <i class="fa-solid fa-mobile-screen"></i>
-                                Celular: 116168 - 9683 
                             </li>
                             <li>
                                 <i class="fa-solid fa-envelope"></i>
@@ -371,5 +370,29 @@
             </div>
         </div>
     </section>
+
+    <!-- footer -->
+    <footer>
+        <a href="#inicio" class="arriba">
+            <i class="fa-solid fa-angles-up"></i>
+        </a>
+        <div class="redes">
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="#"><i class="fa-brands fa-twitch"></i></a>
+            <a href="#"><i class="fa-brands fa-square-github"></i></a>
+            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+        </div>
+        <p>© 2025 Matias Quintana. Todos los derechos reservados.</p>
+    </footer>
+    <!-- Cargar librería EmailJS -->
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script>
+        emailjs.init("C4EtwEpFyOX_N6b5z"); // tu User ID
+    </script>
+
+    <!-- Tu JS principal -->
+    <script src="script.js"></script>
+
+
 </body>
 </html>
